# api_testing_learning

./: README.md  pyproject.toml
tests/: test-get -api.py  test-invalid-url.py  test_imageURL_mailFormat.py
